# octant

./: .coveragerc  .gitignore  .gitlab-ci.yml  .stestr.conf  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
etc/: octant-config-generator.conf
examples/multi-attachment/: multi-attachment.dtl
examples/routing/: routing-doc.dtl  routing.dtl
examples/simulator/: .gitignore  conf.cfg  test.dtl  test1.py  test1.sh  test2.py  test2.sh  test3.sh  topology_gen.py
jenkins/: job.yaml
octant/: __init__.py  base.py  datalog_ast.py  datalog_compiler.py  datalog_parser.py  datalog_primitives.py  datalog_source.py  datalog_theory.py  datalog_typechecker.py  datalog_unfolding.py  main.py  options.py  parser.py  primitives.py  source_file.py  source_openstack.py  source_skydive.py  version.py  z3_comparison.py  z3_result.py
octant/common/: __init__.py  ast.py  primitives.py
octant/datalog/: __init__.py  compiler.py  operations.py  origin.py  projection.py  theory.py  typechecker.py  unfolding.py  z3_result.py
octant/front/: __init__.py  main.py  options.py  parser.py  printer.py  z3_result.py
octant/source/: __init__.py  file.py  openstack_source.py  skydive_source.py  source.py
octant/tests/: base.py  test_datalog_ast.py  test_datalog_compiler.py  test_datalog_parser.py  test_datalog_primitives.py  test_datalog_project.py  test_datalog_source.py  test_datalog_theory.py  test_datalog_typechecker.py  test_datalog_unfolding.py  test_octant.py  test_source_file.py  (+4 more)
octant_functional/: __init__.py  all.py
(+63 files in other folders)
