[metadata]
name = octant
summary = Octant is a fast compliance property checker for OpenStack datasources.
description-file =
    README.rst
author = Orange Labs
author-email = pierre.cregut@orange.com
home-page =
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    octant

[entry_points]
oslo.config.opts =
    octant = octant.front.options:list_opts
console_scripts =
    octant = octant.front.main:main

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = octant/locale
domain = octant

[update_catalog]
domain = octant
output_dir = octant/locale
input_file = octant/locale/octant.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = octant/locale/octant.pot
